--- a/solutions/rust/day08/Cargo.toml
+++ b/solutions/rust/day08/Cargo.toml
@@ -4,3 +4,4 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+uuid = { version = "1.0", features = ["v4", "serde"] } # "serde" feature is for serialization/deserialization
