--- a/solutions/rust/day09/Cargo.toml
+++ b/solutions/rust/day09/Cargo.toml
@@ -4,4 +4,6 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-array2d = "0.3.2"
+bitvec = "1.0"
+rayon = "1.11"
+itertools = "0.14"
